samples/_failures_safe/1761342432_31c45a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dc0d3e2.c: In function ‘main’:
./samples/SAFE/__tmp_3dc0d3e2.c:150:5: error: expected expression at end of input
  150 |     if (!buffer_append(&input_buf, (
      |     ^~
./samples/SAFE/__tmp_3dc0d3e2.c:150:10: error: too few arguments to function ‘buffer_append’
  150 |     if (!buffer_append(&input_buf, (
      |          ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3dc0d3e2.c:38:5: note: declared here
   38 | int buffer_append(Buffer *buf, const uint8_t *src, size_t len) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3dc0d3e2.c:150:5: error: expected declaration or statement at end of input
  150 |     if (!buffer_append(&input_buf, (
      |     ^~
